package com.merge.mergedatingapp.auth.dto;

public record TokenResponse(String accessToken) {}
